Added pages for menu's

--- a/Server/html/base.html
+++ b/Server/html/base.html
@@ -57,25 +57,25 @@
             <div class="col-sm-4" id="sidebar-wrapper">
                 <ul class="sidebar-nav">
                     <li>
-                        <a href="./">Home</a>
+                        <a href="/">Home</a>
                     </li>
                     <li>
-                        <a href="./Bouquets">Bouquets</a>
+                        <a href="/Bouquets">Bouquets</a>
                     </li>
                     <li>
-                        <a href="#">Dreambox</a>
+                        <a href="/Dreambox">Dreambox</a>
                     </li>
                     <li>
-                        <a href="#">FFMPEG</a>
+                        <a href="/FFMPEG">FFMPEG</a>
                     </li>
                     <li>
-                        <a href="#">FFServer</a>
+                        <a href="/FFServer">FFServer</a>
                     </li>
                     <li>
-                        <a href="#">Plex</a>
+                        <a href="/Plex">Plex</a>
                     </li>
                     <li>
-                        <a href="#">Dreambox Server</a>
+                        <a href="/DreamboxServer">Dreambox Server</a>
                     </li>
                 </ul>
             </div>
