--- a/Server/html/index.html
+++ b/Server/html/index.html
@@ -2,5 +2,36 @@
 <%inherit file='/base.html'/>
 
     <%block name='main'>
-        Hello from main
+        <div class="col-sm-12">
+            <div class="col-sm-6" id="container" style="height:200px;"></div>
+        </div>
+
+        <script>
+
+            $(function () {
+                $('#container').highcharts({
+                    chart: {
+                        type: 'bar'
+                    },
+                    title: {
+                        text: 'Server Status'
+                    },
+                    xAxis: {
+                        categories: ['FFMPEG', 'FFServer', 'Dreambox']
+                    },
+                    yAxis: {
+                        title: {
+                            text: 'Connections'
+                        }
+                    },
+                    series: [{
+                        name: 'Jane',
+                        data: [1, 0, 4]
+                    }, {
+                        name: 'John',
+                        data: [5, 7, 3]
+                    }]
+                });
+            });
+        </script>
     </%block>
