Added Bouquet Monitor and updated views

--- a/Server/html/FFServer.html
+++ b/Server/html/FFServer.html
@@ -2,5 +2,14 @@
 <%inherit file='/base.html'/>
 
     <%block name='main'>
-        Hello from FFServer
+               <div class="col-sm-12" style="padding-top: 20px">
+            <legend>FFServer</legend>
+            <div class="row" style="margin-bottom: 10px">
+                <div class="col-lg-3">
+                    <label for="dreamboxip">Path to FFServer</label>
+                </div>
+                <div class="col-lg-9">
+                    <input type="text" name="dreamboxip" id="dreamboxip">
+                </div>
+            </div>
     </%block>
