--- a/Server/html/base.html
+++ b/Server/html/base.html
@@ -25,6 +25,8 @@
     <![endif]-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="http://code.highcharts.com/highcharts.js"></script>
+    <script src="http://code.highcharts.com/highcharts-more.js"></script>
+    <script src="http://code.highcharts.com/modules/exporting.js"></script>
   </head>
 
   <body>
@@ -38,7 +40,7 @@
             <span class="icon-bar">Two</span>
             <span class="icon-bar">Three</span>
           </button>
-          <a class="navbar-brand" href="#">Dreambox Server</a>
+          <a class="navbar-brand" href="/About">Dreambox Server</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -83,7 +85,7 @@
             </div>
         <!-- /#sidebar-wrapper -->
           <!-- Main content -->
-          <section class="col-sm-8 main">
+          <section class="col-sm-12 main">
               <%block name='main'/>
           </section>
     </div>
