--- a/Server/html/dreambox.html
+++ b/Server/html/dreambox.html
@@ -2,5 +2,83 @@
 <%inherit file='/base.html'/>
 
     <%block name='main'>
-        Hello from Dreambox
+
+        <div class="col-sm-12" style="padding-top: 20px">
+            <legend>Dreambox</legend>
+            <div class="row" style="margin-bottom: 10px">
+                <div class="col-lg-3">
+                    <label for="dreamboxip">Host</label>
+                </div>
+                <div class="col-lg-9">
+                    <input type="text" name="dreamboxip" id="dreamboxip">
+                </div>
+            </div>
+            <div class="row" style="margin-bottom: 10px">
+                <div class="col-lg-3">
+                    <label for="dreamboxip">Web Interface Port</label>
+                </div>
+                <div class="col-lg-9">
+                    <input type="number" name="dreamboxip" id="dreamboxip" value="80">
+                </div>
+            </div>
+            <div class="row" style="margin-bottom: 10px">
+                <div class="col-lg-3">
+                    <label for="dreamboxip">WebIF secure login</label>
+                </div>
+                <div class="col-lg-9">
+                    <input type="checkbox" name="dreamboxip" id="dreamboxip">
+                </div>
+            </div>
+            <div class="row" style="margin-bottom: 10px">
+                <div class="col-lg-3">
+                    <label for="dreamboxip">Streaming Video Port</label>
+                </div>
+                <div class="col-lg-9">
+                    <input type="number" name="dreamboxip" id="dreamboxip" value="8001">
+                </div>
+            </div>
+            <div class="row" style="margin-bottom: 10px">
+                <div class="col-lg-3">
+                    <label for="dreamboxip">Path to Load Picons</label>
+                </div>
+                <div class="col-lg-9">
+                    <input type="text" name="dreamboxip" id="dreamboxip">
+                </div>
+            </div>
+            <div class="row" style="margin-bottom: 10px">
+                <div class="col-lg-3">
+                    <label for="dreamboxip">Path to Movie Folder</label>
+                </div>
+                <div class="col-lg-9">
+                    <input type="text" name="dreamboxip" id="dreamboxip">
+                </div>
+            </div>
+            <div class="row" style="margin-bottom: 10px">
+                <div class="col-lg-3">
+                    <label for="dreamboxip">FTP Port</label>
+                </div>
+                <div class="col-lg-9">
+                    <input type="number" name="dreamboxip" id="dreamboxip" value="21">
+                </div>
+            </div>
+            <div class="row" style="margin-bottom: 10px">
+                <div class="col-lg-3">
+                    <label for="dreamboxip">Username</label>
+                </div>
+                <div class="col-lg-9">
+                    <input type="text" name="dreamboxip" id="dreamboxip">
+                </div>
+            </div>
+            <div class="row" style="margin-bottom: 10px">
+                <div class="col-lg-3">
+                    <label for="dreamboxip">Password</label>
+                </div>
+                <div class="col-lg-9">
+                    <input type="password" name="dreamboxip" id="dreamboxip">
+                </div>
+            </div>
+
+
+
+        </div>
     </%block>
