--- a/Server/html/ffmpeg.html
+++ b/Server/html/ffmpeg.html
@@ -2,5 +2,15 @@
 <%inherit file='/base.html'/>
 
     <%block name='main'>
-        Hello from FFMPEG
+       <div class="col-sm-12" style="padding-top: 20px">
+            <legend>FFMPEG</legend>
+            <div class="row" style="margin-bottom: 10px">
+                <div class="col-lg-3">
+                    <label for="dreamboxip">Path to FFMPEG</label>
+                </div>
+                <div class="col-lg-9">
+                    <input type="text" name="dreamboxip" id="dreamboxip">
+                </div>
+            </div>
+
     </%block>
