Get last channel time to finish off

--- a/Server/html/dreamboxserver.html
+++ b/Server/html/dreamboxserver.html
@@ -6,10 +6,16 @@
             <legend>Dreambox Server</legend>
             <div class="row" style="margin-bottom: 10px">
                 <div class="col-lg-3">
-                    <label for="dreamboxip"></label>
+                    <label for="dreamboxip"> How often should we update the EPG info</label>
                 </div>
                 <div class="col-lg-9">
-                    <input type="text" name="dreamboxip" id="dreamboxip">
+                    <input type="text" name="dreamboxip" id="dreamboxip" value="24">
+                </div>
+                <div class="col-lg-3">
+                    <label for="dreamboxip"> How often should we check for updates to bouquets</label>
+                </div>
+                <div class="col-lg-9">
+                    <input type="text" name="dreamboxip" id="dreamboxip" value="1">
                 </div>
             </div>
     </%block>
