--- a/Server/html/ffmpeg.html
+++ b/Server/html/ffmpeg.html
@@ -2,15 +2,39 @@
 <%inherit file='/base.html'/>
 
     <%block name='main'>
-       <div class="col-sm-12" style="padding-top: 20px">
-            <legend>FFMPEG</legend>
-            <div class="row" style="margin-bottom: 10px">
-                <div class="col-lg-3">
-                    <label for="dreamboxip">Path to FFMPEG</label>
-                </div>
-                <div class="col-lg-9">
-                    <input type="text" name="dreamboxip" id="dreamboxip">
-                </div>
-            </div>
-
+       	<div class="col-sm-12" style="padding-top: 20px">
+            		<legend>FFMPEG</legend>
+            		<div class="row" style="margin-bottom: 10px">
+                		<div class="col-lg-3">
+                    			<label for="ffmpegpath">Path to FFMPEG</label>
+                		</div>
+                		<div class="col-lg-9">
+                    			<input type="text" name="ffmpegpath" id="ffmpegpath">
+                		</div>
+				<div class="col-lg-3">
+					<label for='ffmpegsize">Size</label>
+				</div>
+				<div class="col-lg-9">
+					<input type="text" name="ffmpegsize" id='ffmpegsize">
+				</div>
+				<div class="col-lg-3">
+					<label for="ffmpegbitrate">Video Bitrate</label>
+				</div>
+				<div class="col-lg-9">
+					<input type="text" name="ffmpegbitrate" id="ffmpegbitrate">
+				</div>
+				<div class="col-lg-3">
+					<label for="ffmpegvideocodec">Video Codec</label>
+				</div>
+				<div class="col-lg-9">
+					<input type="text" name="ffmpegvideocodec" id="ffmpegvideocodec">
+				</div>
+				<div class="col-lg-3">
+					<label for="ffmpegvideocodecparams">Video Codec Parameters</label>
+				</div>
+				<div class="col-lg-9">
+					<input type="textarea" name="ffmpegvideocodecparams" id="ffmpegvideocodecparams">
+				</div>
+            		</div>
+		</div>
     </%block>
