--- a/Server/html/dreamboxserver.html
+++ b/Server/html/dreamboxserver.html
@@ -6,6 +6,18 @@
             <legend>Dreambox Server</legend>
             <div class="row" style="margin-bottom: 10px">
                 <div class="col-lg-3">
+                    <label for="dbsipaddress">Dreambox Server IP Address</label>
+                </div>
+                <div class="col-lg-9">
+                    <input type="text" name="dbsipaddress" id="dbsipaddress" value="127.0.0.1">
+                </div>
+                <div class="col-lg-3">
+                    <label for="dbsipport">Dreambox Server Port</label>
+                </div>
+                <div class="col-lg-9">
+                    <input type="number" name="dbsipport" id="dbsipport" value="9090">
+                </div>
+                <div class="col-lg-3">
                     <label for="dbsupdateepgfrequency">EPG Update Frequency (Hours)</label>
                 </div>
                 <div class="col-lg-9">
