Added ability to save config values, and updated config pages layout.
Updated ffmpeg plugin to start FFMPEG and supply stream to harcoded URL

--- a/Server/html/FFServer.html
+++ b/Server/html/FFServer.html
@@ -6,10 +6,65 @@
             <legend>FFServer</legend>
             <div class="row" style="margin-bottom: 10px">
                 <div class="col-lg-3">
-                    <label for="dreamboxip">Path to FFServer</label>
+                    <label for="ffserverip">Path to FFServer Config</label>
                 </div>
                 <div class="col-lg-9">
-                    <input type="text" name="dreamboxip" id="dreamboxip">
+                    <input type="text" name="ffserverip" id="ffserverip">
+                </div>
+            </div>
+            <div class="row" style="margin-bottom: 10px">
+                <div class="col-lg-3">
+                    <label for="ffserverbindaddress">Bind Address</label>
+                </div>
+                <div class="col-lg-9">
+                    <input type="text" name="ffserverbindaddress" id="ffserverbindaddress">
+                </div>
+            </div>
+            <div class="row" style="margin-bottom: 10px">
+                <div class="col-lg-3">
+                    <label for="ffserverport">Port</label>
+                </div>
+                <div class="col-lg-9">
+                    <input type="text" name="ffserverport" id="ffserverport">
+                </div>
+            </div>
+            <div class="row" style="margin-bottom: 10px">
+                <div class="col-lg-3">
+                    <label for="ffserverhttpconnections">HTTP Connections</label>
+                </div>
+                <div class="col-lg-9">
+                    <input type="text" name="ffserverhttpconnections" id="ffserverhttpconnections">
+                </div>
+            </div>
+            <div class="row" style="margin-bottom: 10px">
+                <div class="col-lg-3">
+                    <label for="ffservermaxclients">Max Clients</label>
+                </div>
+                <div class="col-lg-9">
+                    <input type="text" name="ffservermaxclients" id="ffservermaxclients">
+                </div>
+            </div>
+            <div class="row" style="margin-bottom: 10px">
+                <div class="col-lg-3">
+                    <label for="ffserverbandwidth">Max Bandwidth</label>
+                </div>
+                <div class="col-lg-9">
+                    <input type="text" name="ffserverbandwidth" id="ffserverbandwidth">
+                </div>
+            </div>
+            <div class="row" style="margin-bottom: 10px">
+                <div class="col-lg-3">
+                    <label for="ffservertmp">Temporary Directory For Feed Buffers</label>
+                </div>
+                <div class="col-lg-9">
+                    <input type="text" name="ffservertmp" id="ffservertmp">
+                </div>
+            </div><div class="row" style="margin-bottom: 10px">
+                <div class="col-lg-3">
+                    <label for="ffservertmpsize">Max Feed Buffer Size (GB)</label>
+                </div>
+                <div class="col-lg-9">
+                    <input type="text" name="ffservertmpsize" id="ffservertmpsize">
                 </div>
             </div>
     </%block>
