--- a/Server/html/dreamboxserver.html
+++ b/Server/html/dreamboxserver.html
@@ -11,37 +11,42 @@
                 <div class="col-lg-9">
                     <input type="text" name="dbsipaddress" id="dbsipaddress" value="127.0.0.1">
                 </div>
+                <div class="col-lg-1" id="db_host_status"></div>
             </div>
             <div class="row" style="margin-bottom: 10px">
                 <div class="col-lg-3">
                     <label for="dbsipport">Dreambox Server Port</label>
                 </div>
-                <div class="col-lg-9">
+                <div class="col-lg-3">
                     <input type="number" name="dbsipport" id="dbsipport" value="9090">
                 </div>
+                <div class="col-lg-1" id="db_host_status"></div>
             </div>
             <div class="row" style="margin-bottom: 10px">
                 <div class="col-lg-3">
                     <label for="dbsupdateepgfrequency">EPG Update Frequency (Hours)</label>
                 </div>
-                <div class="col-lg-9">
+                <div class="col-lg-3">
                     <input type="number" name="dbsupdateepgfrequency" id="dbsupdateepgfrequency" value="24">
                 </div>
+                <div class="col-lg-1" id="db_host_status"></div>
             </div>
             <div class="row" style="margin-bottom: 10px">
                 <div class="col-lg-3">
                     <label for="dbsupdatebouquetfrequency"> Bouquet update Frequency (Hours)</label>
                 </div>
-                <div class="col-lg-9">
+                <div class="col-lg-3">
                     <input type="number" name="dbsupdatebouquetfrequency" id="dbsupdatebouquetfrequency" value="1">
                 </div>
+                <div class="col-lg-1" id="db_host_status"></div>
             </div>
             <div class="row" style="margin-bottom: 10px">
                 <div class="col-lg-3">
                     <label for="dbsupdatenownextfrequency">EPG Now Next Update Frequency (Seconds)</label>
                 </div>
-                <div class="col-lg-9">
+                <div class="col-lg-3">
                     <input type="number" name="dbsupdatenownextfrequency" id="dbsupdatenownextfrequency" value="20">
                 </div>
+                <div class="col-lg-1" id="db_host_status"></div>
             </div>
     </%block>
